# eversense-tray

./: .gitignore  README.md  eversense-tray.desktop  pyproject.toml
src/: app.py  eversense_client.py  glucose_db.py  login_dialog.py  main.py
